# CUDA-notes

10_matrix_add_opt/: CMakeLists.txt  matrix_add_opt.cu
11_get_topk/: Makefile  get_topk.cu
12_tranfer_mtrix/: transfer_data.cu
13_matrix_mul/: matrix_mul_1_dim.cu  matrix_mul_1_managed.cu  matrix_mul_2_dim.cu  matrix_mul_2_managed.cu
14_matrix_stream/: stream.cu
15_atomic/: atomic.cu
16_library/: CMakeLists.txt  Makefile  cudnn_sample.cu  install_cudnn.md  install_cudnn_opencv.md  run.sh
1_hello_cuda/: Makefile  hello_cuda.cu
2_matrix_add/: gemm.cu
2_matrix_multiply/: Makefile  gemm.cu
3_error_check/: Makefile  error_check.cu
4_cuda_timer/: Makefile  record_time.cu
5_runtime_gpu_info/: Makefile  query_runtime_gpu_info.cu
6_thread_orgnization/: a.out  thread_orgnization.cu
7_global_memory_variable/: CMakeLists.txt  global_memory_variable.cu  run.sh
8_shared_memory_variable/: dynamic_shared_memory.cu  static_shared_memory.cu
CUDA/: final_exam.ipynb  notes.md  top20.cu
CUDA/CUDA_winter_camp/01_1.4/: hello_cuda.cu  result2.cu
CUDA/CUDA_winter_camp/02_2.2/: result3.cu
CUDA/CUDA_winter_camp/02_2.4/: 02_2.4.CUDA_storage.ipynb  matrix_mul.cu  result3.cu  result4.cu  test
CUDA/CUDA_winter_camp/03_3.2/: 03_3.2.atomic.ipynb
CUDA/CUDA_winter_camp/04_4.2/: Makefile  result1-stream.cu  result2.cu
CUDA/CUDA_winter_camp/04_4.4/Image-denoising-using-CUFFT/: Makefile  convolution
CUDA/CUDA_winter_cap/01_1.4/: 01_1.4.│ї╩╢CUDA.ipynb  01_1.4.╧▀│╠╫щ╓п.ipynb  Index_of_thread  Index_of_thread.cu  hello_cuda  hello_cuda-001  test1
CUDA/CUDA_winter_cap/01_1.4/.ipynb_checkpoints/: 01_1.4.│ї╩╢CUDA-checkpoint.ipynb
CUDA/CUDA_winter_cap/01_1.4/makefile_tutorial/: makefile_tutorial.ipynb
CUDA/CUDA_winter_cap/02_2.2/: 02_2.2.CUDA┤ц┤в╡е╘к╡─╩╣╙├╙ы┤э╬є╝ь▓т.ipynb  matrix_mul  result2.cu
CUDA/CUDA_winter_cap/02_2.2/.ipynb_checkpoints/: result1-checkpoint.cu
CUDA/CUDA_winter_cap/03_3.2/: result_sum.cu  sum
CUDA/CUDA_winter_cap/03_3.4/: matrix_mul
CUDA/CUDA_winter_cap/03_3.4/.ipynb_checkpoints/: 04_4.2_1-checkpoint.ipynb
CUDA/CUDA_winter_cap/04_4.2/: stream
CUDA/CUDA_winter_cap/04_4.2/.ipynb_checkpoints/: 04_4.2.╓┤╨╨┴ў-checkpoint.ipynb
CUDA/CUDA_winter_cap/04_4.4/: 04_4.2.Cuda┐т.ipynb
CUDA/CUDA_winter_cap/04_4.4/.ipynb_checkpoints/: cudnn_sample-checkpoint.cu
CUDA/first_class_quiz_answer/: hawk1_classic_2-pass.cu  hawk2_classic_2-pass.cu  hawk3_transpose_global.cu  hawk3_transpose_shared_naive.cu
tools/: common.cuh
