cmake_minimum_required(VERSION 3.20)
project(matrix_add_opt LANGUAGES CXX CUDA)

set(CMAKE_EXPORT_COMPILE_COMMANDS on)
set(CMAKE_CUDA_STANDARD 14)
set(CMAKE_CUDA_STANDARD_REQUIRED on)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED on)

find_package(CUDA REQUIRED)
if (CUDA_FOUND)
    message(STATUS "CUD_INCLUDE_DIRS: ${CUDA_INCLUDE_DIRS}")
    message(STATUS "CUDA_LIBRARIES:${CUDA_LIBRARIES}")
    message(STATUS "CUDA_LIBRARY_DIRS:${CUDA_LIBRARY_DIRS}")
else()
    message(FATAL_ERROR "Can't found CUDA")
endif()    
add_executable(matrix_add_opt matrix_add_opt.cu)
target_include_directories(matrix_add_opt PRIVATE ${CUDA_INCLUDE_DIRS})
target_link_directories(matrix_add_opt PRIVATE ${CUDA_LIBRARIES})
